--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,10 @@
           package="com.jameskbride.criminalIntent"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="10"/>
+    <uses-sdk
+            android:minSdkVersion="10"
+            android:targetSdkVersion="18"
+            />
     <application android:label="@string/app_name">
         <activity android:name="CrimeActivity"
                   android:label="@string/app_name">
