--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,14 +8,16 @@
             android:targetSdkVersion="18"
             />
     <application android:label="@string/app_name">
-        <activity android:name=".CrimeListActivity">
+        <activity android:name=".CrimeListActivity"
+                  android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".CrimePagerActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".CrimeListActivity"/>
         </activity>
