--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,10 @@
             android:minSdkVersion="10"
             android:targetSdkVersion="18"
             />
+    <uses-permission
+        android:name="android.permission.CAMERA"/>
+    <uses-feature
+        android:name="android.hardware.camera"/>
     <application android:label="@string/app_name">
         <activity android:name=".CrimeListActivity"
                   android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
@@ -21,5 +25,8 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".CrimeListActivity"/>
         </activity>
+        <activity android:name=".CrimeCameraActivity"
+                  android:screenOrientation="landscape"
+                  android:label="@string/app_name"/>
     </application>
 </manifest> 
