--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,10 @@
 bin/
 gen/
 out/
+build
 # Local configuration file (sdk path, etc)
 local.properties
-
+.gradle
 # Eclipse project files
 .classpath
 .project
