--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
         <activity android:name=".CrimeCameraActivity"
                   android:screenOrientation="landscape"
-                  android:label="@string/app_name"/>
+                  android:label="@string/app_name"
+                  android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
     </application>
 </manifest> 
