--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".CrimeCameraActivity"
                   android:screenOrientation="landscape"
                   android:label="@string/app_name"
+                  android:exported="true"
                   android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
     </application>
 </manifest> 
